# oxifoc

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
device/: Cargo.toml
device/.cargo/: config.toml
device/src/: main.rs  rtt_io.rs
device/src/motor/: mod.rs  pwm.rs  six_step.rs
docs/: rtt-setup.md
host/: Cargo.toml  oxifoc-host.toml
host/src/: config.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: probe_run.sh
