[package]
name = "oxifoc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oxifoc"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Embassy dependencies
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.4.0", features = ["memory-x", "stm32g431cb", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }

# Cortex-M dependencies
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

# Debugging and logging
defmt = "1.0.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# RTT for ergot transport
rtt-target = { version = "0.6.2", features = ["defmt"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"], default-features = false }
postcard-schema = "0.2.5"

# Synchronization
mutex = "1.0.2"

# Local dependencies
oxifoc-protocol = { path = "../protocol" }
ergot = { version = "0.12.0", default-features = false, features = ["embedded-io-async-v0_6", "disable-cache-padding"] }

static_cell = "2.1"
embedded-io-async = "0.6"
heapless = { version = "0.9.2", default-features = false }

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = 2
lto = true
opt-level = "z"
incremental = true
