[package]
name = "oxifoc-host"
version = "0.1.0"
edition = "2024"

[dependencies]
# Protocol shared with device
oxifoc-protocol = { path = "../protocol" }

# Ergot for host side
ergot = { path = "../ergot/crates/ergot", features = ["tokio-std"] }

# probe-rs for RTT communication
probe-rs = "0.30"

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"

# Utilities
anyhow = "1.0"
mutex = "1.0.2"

# Decoding ergot frames
cobs = "0.5"
postcard = "1.1"
cobs-acc = { path = "../ergot/crates/cobs-acc", features = ["std"] }

# Decode defmt frames from RTT using device ELF
defmt-decoder = "1.0"

# Config loading (TOML)
serde = { version = "1", features = ["derive"] }
toml = "0.9"
