[package]
name = "oxifoc-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
ergot = { version = "0.12.0" }
postcard-schema = { version = "0.2.5", features = ["derive", "heapless-v0_9"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
heapless = { version = "0.9.2", default-features = false, features = ["serde"] }
